tests/ui/parser/issues/issue-68987-unmatch-issue-2.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-68987-unmatch-issue-2.rs:3:32
   |
LL | async fn obstest() -> Result<> {
   |                                ^ unclosed delimiter
LL |     let obs_connect = || -> Result<(), MyError) {
   |                                               ^
   |                                               |
   |                                               mismatched closing delimiter
   |                                               missing open `(` for this delimiter

error: aborting due to 1 previous error

